Update and rename index.1.5.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Font/TTLakes/stylesheet.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="/css/base.1.5.css">
+    <link rel="stylesheet" href="base.1.5.css">
 
     <title>1.5</title>
 
@@ -36,7 +36,7 @@
     <button class="repair__button-flex"><span class="repair__text-flex">Показать</span></button>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="/js/base.js"></script>
+    <script src="base.js"></script>
 
 </body>
 </html>
