--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <button class="repair__button-flex"><span class="repair__text-flex">Показать</span></button>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="base.js"></script>
+    <script src="js/base.js"></script>
 
 </body>
 </html>
