--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <div class="swiper ">
         <div class="swiper-container ">
             <div class="swiper-wrapper menu__brand-repair">
-                <div class="logo__repair swiper-slide"><a class="button__box"><img src="/img/brand-repair/lenovo.svg" alt=""><div class="button__next"></div></a></div>
-                <div class="logo__repair swiper-slide"><a class="button__box"><img src="/img/brand-repair/samsung.svg" alt=""><div class="button__next"></div></a></div>
-                <div class="logo__repair swiper-slide"><a class="button__box"><img src="/img/brand-repair/apple.svg" alt=""><div class="button__next"></div></a></div>
-                <div class="logo__repair swiper-slide"><a class="button__box"><img src="/img/brand-repair/viewsonik.svg" alt=""><div class="button__next"></div></a></div>
-                <div class="logo__repair swiper-slide"><a class="button__box"><img src="/img/brand-repair/bosch.svg" alt=""><div class="button__next"></div></a></div>
-                <div class="logo__repair swiper-slide"><a class="button__box"><img src="/img/brand-repair/hp.svg" alt=""><div class="button__next"></div></a></div>
-                <div class="logo__repair swiper-slide"><a class="button__box"><img src="/img/brand-repair/acer.svg" alt=""><div class="button__next"></div></a></div>
-                <div class="logo__repair swiper-slide"><a class="button__box"><img src="/img/brand-repair/sony.svg" alt=""><div class="button__next"></div></a></div>
-                <div class="logo__repair swiper-slide"><a class="button__box"><img src="/img/brand-repair/lenovo.svg" alt=""><div class="button__next"></div></a></div>
-                <div class="logo__repair swiper-slide"><a class="button__box"><img src="/img/brand-repair/samsung.svg" alt=""><div class="button__next"></div></a></div>
+                <div class="logo__repair swiper-slide"><a class="button__box"><img src="img/brand-repair/lenovo.svg" alt=""><div class="button__next"></div></a></div>
+                <div class="logo__repair swiper-slide"><a class="button__box"><img src="img/brand-repair/samsung.svg" alt=""><div class="button__next"></div></a></div>
+                <div class="logo__repair swiper-slide"><a class="button__box"><img src="img/brand-repair/apple.svg" alt=""><div class="button__next"></div></a></div>
+                <div class="logo__repair swiper-slide"><a class="button__box"><img src="img/brand-repair/viewsonik.svg" alt=""><div class="button__next"></div></a></div>
+                <div class="logo__repair swiper-slide"><a class="button__box"><img src="img/brand-repair/bosch.svg" alt=""><div class="button__next"></div></a></div>
+                <div class="logo__repair swiper-slide"><a class="button__box"><img src="img/brand-repair/hp.svg" alt=""><div class="button__next"></div></a></div>
+                <div class="logo__repair swiper-slide"><a class="button__box"><img src="img/brand-repair/acer.svg" alt=""><div class="button__next"></div></a></div>
+                <div class="logo__repair swiper-slide"><a class="button__box"><img src="img/brand-repair/sony.svg" alt=""><div class="button__next"></div></a></div>
+                <div class="logo__repair swiper-slide"><a class="button__box"><img src="img/brand-repair/lenovo.svg" alt=""><div class="button__next"></div></a></div>
+                <div class="logo__repair swiper-slide"><a class="button__box"><img src="img/brand-repair/samsung.svg" alt=""><div class="button__next"></div></a></div>
                 <div class="logo__repair swiper-slide extra"><a class="button__box"><img src="/img/brand-repair/apple.svg" alt=""><div class="button__next"></div></a></div>
 
             </div>
