--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="logo__repair swiper-slide"><a class="button__box"><img src="img/brand-repair/sony.svg" alt=""><div class="button__next"></div></a></div>
                 <div class="logo__repair swiper-slide"><a class="button__box"><img src="img/brand-repair/lenovo.svg" alt=""><div class="button__next"></div></a></div>
                 <div class="logo__repair swiper-slide"><a class="button__box"><img src="img/brand-repair/samsung.svg" alt=""><div class="button__next"></div></a></div>
-                <div class="logo__repair swiper-slide extra"><a class="button__box"><img src="/img/brand-repair/apple.svg" alt=""><div class="button__next"></div></a></div>
+                <div class="logo__repair swiper-slide extra"><a class="button__box"><img src="img/brand-repair/apple.svg" alt=""><div class="button__next"></div></a></div>
 
             </div>
             <div class="swiper-pagination"></div>
