--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="base.1.5.css">
+    <link rel="stylesheet" href="Font/TTLakes/stylesheet.css">
 
     <title>1.5</title>
 
